@@ -1,3 +1,8 @@
+2010-04-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tkWinPort.h  Fix [Patch 2986105]: conditionally defining
+	strcasecmp/strncasecmp
+
 2010-04-12  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkImgPNG.c (WriteIDAT): [Bug 2984787]: Use the correct
